# spark_job_interface_service

./: .gitignore  README.md  create_virtual_env.sh  dev-requirements.txt  injector.py  main.py  pyproject.toml  service-log.sh  service-start.sh
config/: log_config.py
controller/: download_controller.py  job_controller.py
repository/: hosts  sparkjob_process
service/: job_service.py  status_handler.py
