[tool.poetry]
name = "spark-job-interface-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.30.0"
pytz = "^2024.1"
httpx = "^0.27.0"
requests = "^2.32.2"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
